test/neg/neg-new2.errc
The element type to upcxx::new_ currently may not
